# today

./: ADMIN_APPROVAL_NOTIFICATIONS.md  AI_API_INTEGRATION.md  AI_CHAT_SUCCESS_SUMMARY.md  AI_Chat_Postman_Collection.json  API_ACCESS.md  API_TESTING_GUIDE.md  DATABASE_ACCESS.md  DOCKER_QUICK_START.md  FINAL_SUMMARY.txt  FRONTEND_SETUP.md  HTTPS_DEPLOYMENT.md  NOTIFICATION_API.md  NOTIFICATION_COMPLETE_SUMMARY.md  NOTIFICATION_SETUP_SUMMARY.md  POSTMAN_TESTING_GUIDE.md  QUICK_API_REFERENCE.md  SIMPLE_CHAT_POSTMAN.json  SIMPLIFIED_API_SUCCESS.md  TEAM_CONNECTION_DETAILS.txt  WEBSOCKET_FIX.md  WEBSOCKET_NOTIFICATION_FIX.md  deploy.sh  docker-compose-prod.yml  docker-compose.yml  proxy.py  requirements_ai.txt  setup-https-prod.sh  setup-ssl.sh  start_docker.bat  start_docker.sh
AIHotel/: .gitignore  API_INTEGRATION_GUIDE.md  Dockerfile  README.md  api_server.py  auth.py.new  auth_setup.py  main.py  pyproject.toml  requirements.txt  secret_key.txt
AIHotel/agents/: __init__.py  hotel_agent.py  orchestrator.py
AIHotel/config/: settings.py
AIHotel/core/: __init__.py  database.py  hybrid_search.py  integrated_search.py  json_db.py  nl_to_sql.py  query_parser.py  sqlite_db.py  vector_store.py
AIHotel/scripts/: setup_systemd.sh  sync_hotels.py
AIHotel/tests/: chat_cli.py  check_amenities.py  check_dhaka.py  check_dhaka_detailed.py  discover_schema.py  get_cities.py  hotels.json  run_test.sh  streamlit_app.py  test_100_questions.py  test_all_fixes.py  test_australia_50.py  test_australia_history.py  test_basic.py  test_bug_fixes.py  test_database.py  test_dhaka_search.py  (+14 more)
(+83 files in other folders)
